chore(remap): complete manual Mojang remapping missed by Ravel
Look for remaining `// TODO(Ravel)` and anything else I may have missed.